@@ -1,5 +1,7 @@
 2009-06-11  Richard Henderson  <rth@redhat.com>
 
+	* dwarf2out.c (def_cfa_1): Likewise for DW_CFA_cfa_offset.
+
 	* dwarf2out.c (need_data_align_sf_opcode): New.
 	(div_data_align): Move earlier.
 	(def_cfa_1, reg_save): Use it.
